Bug 1935124 - Change MboxParser to allow empty files without a failure. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D231091

--HG--
extra : rebase_source : 1cf35fb597663b58aec3589e8fac7077d8822ff9